# app/internal/transport/http/v1/category_create.go
@@ -6,18 +6,19 @@ import (
 	"net/http"
 
 	"github.com/gofiber/fiber/v2"
+	_ "github.com/vildan-valeev/go-clean-architecture/docs"
 )
 
+// CategoryCreate 	godoc
 // @Summary     Show history
 // @Description Show all translation history
 // @ID          history
-// @Tags  	    translation
+// @Tags  	    category
 // @Accept      json
 // @Produce     json
-// @Success     200 {object} historyResponse
-// @Failure     500 {object} response
-// @Router      /translation/history [get]
-
+// @Success     200 {object} dto.CategoryCreateResponse
+// @Failure     500 {object} dto.Response
+// @Router      /category [post]
 func (t *Transport) CategoryCreate(c *fiber.Ctx) error {
 	s := new(dto.CategoryCreateRequest)
 
